# sap-commerce-backoffice-icons

./: LICENSE  Makefile  README.md  backofficeIconConverter.py  pyproject.toml  requirements.txt
.github/workflows/: basic-checks.yml
doc/: SpriteFormat.md  Tutorial.md
sap_commerce_backoffice_icons/: backofficeIconConverter.py
