[tool.poetry]
name = "sap_commerce_backoffice_icons"
version = "1.0.0"
description = "Simple Tool to create explorer tree icons for the SAP Commerce Backoffice interface"
authors = ["Jan Bucher <jan@bucher.cloud>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dev-jan/sap-commerce-backoffice-icons"
homepage = "https://github.com/dev-jan/sap-commerce-backoffice-icons"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development"
]
packages = [
    { include = "sap_commerce_backoffice_icons" }
]

[tool.poetry.scripts]
backofficeIconConverter = "sap_commerce_backoffice_icons.backofficeIconConverter:main"

[tool.poetry.dependencies]
python = "^3.7,<3.11"
numpy = "^1.21.3"
Pillow = ">=8.4,<10.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
